all minor details fixedshadow,spacing,font-size,etc

--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,20 @@ body{
   font: 14px/1.5 'open sans', arial, sans-serif;
   position: relative;
   padding-bottom: 0;
+  background: white;
+  color: #7f8c8c;
 }
 
 a{
   color: #fff!important;
+}
+
+.rightSpace5{
+  margin-right: 25px;
+}
+
+.glyphicon-menu-right,.glyphicon-menu-down {
+  font-size: 10px;
 }
 
 
@@ -30,13 +40,18 @@ nav ul li{
 
 .navbar-default .navbar-nav>li>a {
   padding: 10px 12px;
+  margin-left: 5px;
+}
+
+.glyphicon-menu-right {
+  font-size: 10px;
 }
 
 
 .navbar-default .navbar-nav>li>a:focus, .navbar-default .navbar-nav>li>a:hover {
     color: #fff;
     background-color: #62a29e;
-    border-radius: 10px;
+    border-radius: 7px;
     padding: 10px 12px;
     box-shadow: 0 3px 0 0 #528b86;
 }
@@ -44,7 +59,8 @@ nav ul li{
 
 .navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:focus, .navbar-default .navbar-nav>.open>a:hover {
     color: #555;
-    background-color: #62a29e;
+    background-color: #e8645a;
+    box-shadow: 0 3px 0 0 #e2534b;
 }
 
 
@@ -52,6 +68,7 @@ nav ul li{
     margin-top: 13px;
     background-color: #e2534b;
     border-radius: 10px;
+    padding: 2px;
 }
 
 
@@ -74,7 +91,7 @@ nav ul li{
   background-color: #e2534b;
   position: absolute;
   transform: rotate(45deg);
-  margin-top: -10px;
+  margin-top: -8px;
   margin-left: 12px;
   z-index: -1;
 }
@@ -98,12 +115,12 @@ nav ul li{
 }
 
 .carousel-caption h1{
-  font-weight: bold;
-  font-size: 36px;
-  background-color: #e2534b;
-  display: inline-block;
-  padding: 5px;
-  border-radius: 5px;
+    font-weight: 800;
+    font-size: 50px;
+    background-color: #e2534b;
+    display: inline-block;
+    padding: 0px 8px;
+    border-radius: 5px;
 }
 
 .carousel-caption p{
@@ -124,9 +141,14 @@ nav ul li{
   background-color: #e8645a;
   padding: 15px;
   border-radius: 0 5px 5px 0;
+  box-shadow: 0 3px 0 0 #e2534b;
 }
 
 .carousel-control{
+  opacity: 1;
+}
+
+.carousel-control:hover{
   opacity: 1;
 }
 
@@ -139,6 +161,7 @@ nav ul li{
   background-color: #e8645a;
   border-radius: 5px 0px 0px 5px;
   padding: 15px;
+  box-shadow: 0 3px 0 0 #e2534b;
 }
 
 .carousel-control.right,.carousel-control.left{
@@ -155,6 +178,8 @@ nav ul li{
     height: 5px;
     background-color: #b0b8b9;
     border-radius: 0;
+    padding: 0;
+    margin: 0;
 }
 
 .carousel-indicators .active {
@@ -190,10 +215,12 @@ nav ul li{
   border: none;
   color: white;
   outline: none;
+  box-shadow: 0 3px 0 0 #e2534b;
 }
 
 .services button:hover{
   background-color: #76c7c0;
+  box-shadow: 0 3px 0 0 #62b9b0;
 }
 
 .services .heading-para h2{
@@ -286,7 +313,8 @@ footer .logo{
 }
 
 .company h4, .community h4{
-  margin-bottom: 30px;
+  margin-bottom: 15px;
+  color: #3b6360;
 }
 
 .footer-text,.company,.community{
@@ -396,6 +424,10 @@ footer .logo{
   header nav ul#navigation{
     margin-right: 0;
   }
+
+  .navbar-default .navbar-nav>li>a {
+  margin-left: 0px;
+}
 
   .logo {
     width: 160px;
